fix: auto wrap "N gr." to article__title

--- a/packages/api-server/src/RegulationPdf.css
+++ b/packages/api-server/src/RegulationPdf.css
@@ -457,7 +457,7 @@
     text-align: center;
     line-height: 1.1;
     font-size: 1.5em;
-    margin-bottom: 0.5em;
+    margin-bottom: 0.2em;
   }
   .regulation__title {
     font-size: 1em;
